-Added a bunch of error handling -WordsAPI was down for a few hours, trying to dev around it -updated documentation -changed input to button -bugged state transition fix on filter state change -small css change for button and filter input -readme updates

--- a/nm-filterable-list/src/App.css
+++ b/nm-filterable-list/src/App.css
@@ -49,6 +49,11 @@ svg {
   border: 1px solid black;
 }
 
+.filterInputWithCallBackContainer, .moreAgentsButtonContainer {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 /* Large Screens */
 @media (min-width: 800px) {
   .spyItemContainer {
